ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: for-delete-here
  labels:
    name: for-delete-here
spec:
  rules:
  - host: example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: non-existing
            port:
              number: 8080
